# morse_people_tracker

./: CMakeLists.txt  README.md  package.xml
launch/: morse_people_tracker.launch
scripts/: .log.py.swp  .trajectory.py.swp  log.py  trajectory.py
src/morse_people_tracker/: .tracker.py.swp  tracker.py
